--- a/index.html
+++ b/index.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bootstrap 101 Template</title>
+    <title>Weblog</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/bootstrap.css" rel="stylesheet" media="screen">
   </head>
   <body>
+    <div class="navbar navbar-default navbar-static-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="https://iversity.org/">Weblog zum Kurs Web-Engineering I</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="impressum.html">Impressum</a></li>
+          </ul>
+          <!-- <ul class="nav navbar-nav navbar-right">
+            <li><a href="../navbar/">Default</a></li>
+            <li class="active"><a href="./">Static top</a></li>
+            <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+          </ul> -->
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+    
+    
     <div class="jumbotron">
       <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+        <h1>Welcome zum Weblog!</h1>
+        <p>Hier findest Du Beispiele, die im Rahmen der Hausaufgaben erstellt wurden. Viel Spaß!</p>
+        <!--  <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>-->
       </div>
     </div>
     <div class="container">
@@ -20,25 +40,20 @@
       <div class="row">
         <div class="col-md-4">
           <h2>Tabelle</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="tabelle.html" role="button">View details &raquo;</a></p>
+          <p>Beispiel einer Tabellen mit der Übersicht aller "XHTML 1.0 strict"-Elemente</p>
+          <p><a class="btn btn-default" href="tabelle.html" role="button">Zur Tabelle &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Suchformular</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="suchformular.html" role="button">View details &raquo;</a></p>
+          <p>Beispiel eines Formulars zur Wikipedia-Suche</p>
+          <p><a class="btn btn-default" href="suchformular.html" role="button">Zum Suchformular &raquo;</a></p>
        </div>
-        <div class="col-md-4">
-          <h2>Impressum</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
       </div>
 
       <hr>
 
       <footer>
-        <p>&copy; Company 2013</p>
+        <p>&copy; Weblog 2014</p>
       </footer>
     </div>
     <script src="http://code.jquery.com/jquery.js"></script>
