--- a/suchformular.html
+++ b/suchformular.html
@@ -18,6 +18,7 @@
 	#suchen{margin-top:10px; border-radius: 5px; height: 22px;  border: 1px solid #000000;}
 	.tableForm{width:300px;}
 	label{margin-left: 2px;}
+	.back{clear:left;}
 </style>
 </head>
 <body>
@@ -37,6 +38,6 @@
           src="http://www.w3.org/WAI/wcag2AAA"
           alt="Level Triple-A conformance, 
           W3C WAI Web Content Accessibility Guidelines 2.0"></a>
-<p><a class="btn btn-default" href="index.html" role="button">Zurück&raquo;</a></p>
+<p class="back"><a class="btn btn-default" href="index.html" role="button">Zurück&raquo;</a></p>
 </body>
 </html>
