--- a/impressum.html
+++ b/impressum.html
@@ -36,7 +36,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Company 2013</p>
+        <p>&copy; Weblog 2014</p>
       </footer>
     </div>
     <script src="http://code.jquery.com/jquery.js"></script>
