--- a/suchformular.html
+++ b/suchformular.html
@@ -5,11 +5,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Insert title here</title>
 <style type="text/css">
-	body{font-family: verdana, arial, helvetica, sans-serif;}
-	table {border-collapse: collapse;}
-	thead{background-color: #E4E4E4;}
-	th{padding: 10px 5px; text-align: left;}
-	td{border-top: 1px solid #CBCBCB; vertical-align: top; padding: 5px 10px 5px 5px;}
 	fieldset{width:503px; margin: 10px 0 57px 0; float:left;}
 	h1{clear:both; margin-top:10px;}
 	#wgac{float: left; margin: 71px 0px 0px 20px;}
@@ -32,12 +27,12 @@
       <input type="submit" name="fulltext" value="Volltextsuche" class="button"/>
    </fieldset>
 </form>
-<a id="wgac" href="http://wave.webaim.org/report?__hstc=162494947.0a499e8cd88fc4269e01141323879831.1380266182053.1386342085463.1386377394793.17&__hssc=162494947.3.1386377394793&__hsfp=2598889390#/http://homework6.cloudcontrolled.com/"
+<a id="wgac" href="http://wave.webaim.org/report#/http%3A%2F%2Ftatjanaposch.cloudcontrolled.com%2Fsuchformular.html"
       title="Explanation of WCAG 2.0 Level Triple-A Conformance">
   <img height="32" width="88" 
           src="http://www.w3.org/WAI/wcag2AAA"
           alt="Level Triple-A conformance, 
           W3C WAI Web Content Accessibility Guidelines 2.0"></a>
-<p class="back"><a class="btn btn-default" href="index.html" role="button">Zurück&raquo;</a></p>
+<p class="back"><a href="index.html">Zurück&raquo;</a></p>
 </body>
 </html>
