--- a/tabelle.html
+++ b/tabelle.html
@@ -9,14 +9,7 @@
 	thead{background-color: #E4E4E4;}
 	th{padding: 10px 5px; text-align: left;}
 	td{border-top: 1px solid #CBCBCB; vertical-align: top; padding: 5px 10px 5px 5px;}
-	fieldset{width:503px; margin: 10px 0 57px 0; float:left;}
 	h1{clear:both; margin-top:10px;}
-	#wgac{float: left; margin: 71px 0px 0px 20px;}
-	.button1{border-radius: 5px; cursor: pointer; margin-right: 2px; width: 114px; height: 27px; background-color: #e4e4e4; font-weight: bold;}
-	.button{border-radius: 5px; cursor: pointer; margin-right: 2px; width: 114px; height: 27px; background-color: #e4e4e4; font-weight: bold;}
-	#suchen{margin-top:10px; border-radius: 5px; height: 22px;  border: 1px solid #000000;}
-	.tableForm{width:300px;}
-	label{margin-left: 2px;}
 </style>
 </head>
 <body>
@@ -498,8 +491,8 @@
 	</tbody>
 </table>
 <p>
-<a href="http://validator.w3.org/check?uri=http%3A%2F%2Fhomework6.cloudcontrolled.com"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" /></a> 
-<a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fhomework6.cloudcontrolled.com%2F;profile=css2"><img src="http://www.w3.org/Icons/valid-css2-blue" alt="Valid CSS!" /> </a></p>
-<p><a class="btn btn-default" href="index.html" role="button">Zurück&raquo;</a></p>
+<a href="http://validator.w3.org/check?uri=http%3A%2F%2Ftatjanaposch.cloudcontrolled.com/tabelle.html"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" /></a> 
+<a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Ftatjanaposch.cloudcontrolled.com/tabelle.html;profile=css2"><img src="http://www.w3.org/Icons/valid-css2-blue" alt="Valid CSS!" /> </a></p>
+<p><a href="index.html">Zurück&raquo;</a></p>
 </body>
 </html>
