--- a/impressum.html
+++ b/impressum.html
@@ -28,7 +28,7 @@
         <div class="col-md-4">
           <h2>Impressum</h2>
           <p>Herausgeber:  Tatjana Poscharizki</p>
-          <p>E-Mail-Adresse: postat@web.de</p>
+          <p>E-Mail-Adresse: &#112;&#111;&#115;&#116;&#97;&#116;&#64;&#119;&#101;&#98;&#46;&#100;&#101;</p>
           <p><a class="btn btn-default" href="index.html" role="button">Home &raquo;</a></p>
         </div>
       </div>
