--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Welcome zum Weblog!</h1>
-        <p>Hier findest Du Beispiele, die im Rahmen der Hausaufgaben erstellt wurden. Viel Spaß!</p>
+        <p>Hier findest Du Beispiele, die im Rahmen der Hausaufgaben des Online-Kurses "Web-Engineering I: Grundlagen der Web-Entwicklung" erstellt wurden. Viel Spaß!</p>
         <!--  <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>-->
       </div>
     </div>
