--- a/suchformular.html
+++ b/suchformular.html
@@ -6,7 +6,7 @@
 <title>Insert title here</title>
 <style type="text/css">
 	fieldset{width:503px; margin: 10px 0 57px 0; float:left;}
-	h1{clear:both; margin-top:10px;}
+	h1.suchform{clear:both; margin-top:10px;}
 	#wgac{float: left; margin: 71px 0px 0px 20px;}
 	.button1{border-radius: 5px; cursor: pointer; margin-right: 2px; width: 114px; height: 27px; background-color: #e4e4e4; font-weight: bold;}
 	.button{border-radius: 5px; cursor: pointer; margin-right: 2px; width: 114px; height: 27px; background-color: #e4e4e4; font-weight: bold;}
@@ -15,9 +15,10 @@
 	label{margin-left: 2px;}
 	.back{clear:left;}
 </style>
+
 </head>
 <body>
-<h1>Das Formular zur Wikipedia-Suche</h1>
+<h1 class="suchform">Das Formular zur Wikipedia-Suche</h1>
 <form action="http://de.wikipedia.org/wiki/Spezial:Suche">
    <fieldset>
 	<legend>Wikipedia-Suche</legend>
@@ -33,6 +34,6 @@
           src="http://www.w3.org/WAI/wcag2AAA"
           alt="Level Triple-A conformance, 
           W3C WAI Web Content Accessibility Guidelines 2.0"></a>
-<p class="back"><a href="index.html">Zurück&raquo;</a></p>
+<p class="back"><a href="index.html">&laquo; Zurück</a></p>
 </body>
 </html>
