--- a/tabelle.html
+++ b/tabelle.html
@@ -493,6 +493,6 @@
 <p>
 <a href="http://validator.w3.org/check?uri=http%3A%2F%2Ftatjanaposch.cloudcontrolled.com/tabelle.html"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" /></a> 
 <a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Ftatjanaposch.cloudcontrolled.com/tabelle.html;profile=css2"><img src="http://www.w3.org/Icons/valid-css2-blue" alt="Valid CSS!" /> </a></p>
-<p><a href="index.html">Zurück&raquo;</a></p>
+<p><a href="index.html">&laquo; Zurück</a></p>
 </body>
 </html>
