--- a/impressum.html
+++ b/impressum.html
@@ -11,7 +11,7 @@
     <div class="navbar navbar-default navbar-static-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="https://iversity.org/">Weblog zum Kurs Web-Engineering I</a>
+          <a class="navbar-brand" href="https://iversity.org/">Go for free education!</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
