--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="navbar navbar-default navbar-static-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="https://iversity.org/" target="_blank">Weblog zum Kurs "Web-Engineering I"</a>
+          <a class="navbar-brand" href="https://iversity.org/" target="_blank">Go for free education!</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -31,7 +31,8 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Welcome zum Weblog!</h1>
-        <p>Hier findest Du Beispiele, die im Rahmen der Hausaufgaben des Online-Kurses "Web-Engineering I: Grundlagen der Web-Entwicklung" erstellt wurden. Das ist einer der vielen kostenlosen Kursen auf <a href="https://iversity.org" title="iversity.org" target="_blank">iversity.org</a>.<br />Viel Spaß!</p>
+        <p>Hier findest Du Beispiele, die im Rahmen der Hausaufgaben des Online-Kurses "Web-Engineering I: Grundlagen der Web-Entwicklung" erstellt wurden. Es ist einer der vielen kostenlosen Kursangebote der Online-Lernplattform <a href="https://iversity.org" title="iversity.org" target="_blank">iversity.org</a>.</p>
+        <p>Viel Spaß beim bewerten!</p>
         <!--  <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>-->
       </div>
     </div>
@@ -40,7 +41,7 @@
       <div class="row">
         <div class="col-md-4">
           <h2>Tabelle</h2>
-          <p>Beispiel einer Tabellen mit der Übersicht aller "XHTML 1.0 strict"-Elemente</p>
+          <p>Beispiel einer Tabelle mit der Übersicht aller "XHTML 1.0 strict"-Elemente</p>
           <p><a class="btn btn-primary" href="tabelle.html" role="button">Zur Tabelle &raquo;</a></p>
         </div>
         <div class="col-md-4">
