Anpassung an bootstrap-css

--- a/impressum.html
+++ b/impressum.html
@@ -29,7 +29,10 @@
           <h2>Impressum</h2>
           <p>Herausgeber:  Tatjana Poscharizki</p>
           <p>E-Mail-Adresse: &#112;&#111;&#115;&#116;&#97;&#116;&#64;&#119;&#101;&#98;&#46;&#100;&#101;</p>
-          <p><a class="btn btn-primary" href="index.html" role="button">Home &raquo;</a></p>
+          <!-- <p><a class="btn btn-primary" href="index.html" role="button">Home &raquo;</a></p> -->
+          <br />
+          <br />
+          <br />
         </div>
       </div>
 
