--- a/tabelle.html
+++ b/tabelle.html
@@ -2,19 +2,19 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="de" xml:lang="de">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Insert title here</title>
-<style type="text/css">
-	table {border-collapse: collapse;}
-	thead{background-color: #E4E4E4;}
-	th{padding: 10px 5px; text-align: left;}
-	td{border-top: 1px solid #CBCBCB; vertical-align: top; padding: 5px 10px 5px 5px;}
-	h1{clear:both; margin-top:10px;}
-</style>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<title>Tabelle</title>
+	<style type="text/css">
+		table {border-collapse: collapse; margin-left:10px;}
+		thead{background-color: #E4E4E4;}
+		th{padding: 10px 5px; text-align: left;}
+		td{border-top: 1px solid #CBCBCB; vertical-align: top; padding: 5px 10px 5px 5px;}
+	</style>
+	<link href="css/bootstrap.css" rel="stylesheet" media="screen">
 </head>
 <body>
 
-<h1>Übersicht aller "XHTML 1.0 strict"-Elemente</h1>
+<h1 class="special">Übersicht aller "XHTML 1.0 strict"-Elemente</h1>
 <table>
 	<thead>
 		<tr>
@@ -490,9 +490,9 @@
 		
 	</tbody>
 </table>
-<p>
+<p class="tableButtons">
 <a href="http://validator.w3.org/check?uri=http%3A%2F%2Ftatjanaposch.cloudcontrolled.com/tabelle.html"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" /></a> 
 <a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Ftatjanaposch.cloudcontrolled.com/tabelle.html;profile=css2"><img src="http://www.w3.org/Icons/valid-css2-blue" alt="Valid CSS!" /> </a></p>
-<p><a href="index.html">&laquo; Zurück</a></p>
+<p class="back"><a class="btn btn-primary" href="index.html">&laquo; Zurück</a></p>
 </body>
 </html>
