css in tabelle.html anpassen

--- a/tabelle.html
+++ b/tabelle.html
@@ -5,12 +5,22 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Tabelle</title>
 	<style type="text/css">
+		body{line-height: 1.428571429;}
 		table {border-collapse: collapse; margin-left:10px;}
 		thead{background-color: #E4E4E4;}
 		th{padding: 10px 5px; text-align: left;}
-		td{border-top: 1px solid #CBCBCB; vertical-align: top; padding: 5px 10px 5px 5px;}
+		td{border-top: 1px solid #CBCBCB; vertical-align: top; padding: 5px 10px 5px 5px; font-size:14px;}
+		code{padding: 2px 4px; font-size: 90%; color: #c7254e; white-space: nowrap; background-color: #f9f2f4;}
+		h1.special{clear:both; margin:20px 10px 20px 10px; font-weight: 500; line-height: 1.1; font-size:36px;}
+		.back{clear:left; margin: 20px 10px 0 10px;}
+		.tableButtons{margin: 20px 0 10px 10px;}
+		.btn{display: inline-block; padding: 6px 12px; border: 1px solid transparent; text-decoration: none; font-size:14px;}
+		.btn-primary {color: #ffffff; background-color: #428bca; border-color: #357ebd;}
+		.btn:focus{outline: 5px auto -webkit-focus-ring-color;}
+		.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {color: #ffffff; background-color: #3276b1; border-color: #285e8e;}
+		
 	</style>
-	<link href="css/bootstrap.css" rel="stylesheet" media="screen">
+
 </head>
 <body>
 
