css in tabelle.html anpassen_2

--- a/tabelle.html
+++ b/tabelle.html
@@ -15,8 +15,8 @@
 		.back{clear:left; margin: 20px 10px 0 10px;}
 		.tableButtons{margin: 20px 0 10px 10px;}
 		.btn{display: inline-block; padding: 6px 12px; border: 1px solid transparent; text-decoration: none; font-size:14px;}
+		.btn:hover, .btn:focus{color: #333333; text-decoration: none;}
 		.btn-primary {color: #ffffff; background-color: #428bca; border-color: #357ebd;}
-		.btn:focus{outline: 5px auto -webkit-focus-ring-color;}
 		.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {color: #ffffff; background-color: #3276b1; border-color: #285e8e;}
 		
 	</style>
