--- a/tabelle.html
+++ b/tabelle.html
@@ -9,7 +9,7 @@
 		table {border-collapse: collapse; margin-left:10px;}
 		thead{background-color: #E4E4E4;}
 		th{padding: 10px 5px; text-align: left;}
-		td{border-top: 1px solid #CBCBCB; vertical-align: top; padding: 5px 10px 5px 5px; font-size:14px;}
+		td{border-top: 1px solid #CBCBCB; vertical-align: top; padding: 5px 10px 5px 5px; font-size:14px; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;}
 		code{padding: 2px 4px; font-size: 90%; color: #c7254e; white-space: nowrap; background-color: #f9f2f4;}
 		h1.special{clear:both; margin:20px 10px 20px 10px; font-weight: 500; line-height: 1.1; font-size:36px;}
 		.back{clear:left; margin: 20px 10px 0 10px;}
@@ -502,7 +502,7 @@
 </table>
 <p class="tableButtons">
 <a href="http://validator.w3.org/check?uri=http%3A%2F%2Ftatjanaposch.cloudcontrolled.com/tabelle.html"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" /></a> 
-<a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Ftatjanaposch.cloudcontrolled.com/tabelle.html;profile=css2"><img src="http://www.w3.org/Icons/valid-css2-blue" alt="Valid CSS!" /> </a></p>
+<a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Ftatjanaposch.cloudcontrolled.com/tabelle.html;profile=css21"><img src="http://www.w3.org/Icons/valid-css2-blue" alt="Valid CSS!" /> </a></p>
 <p class="back"><a class="btn btn-primary" href="index.html">&laquo; Zurück</a></p>
 </body>
 </html>
