css in tabelle.html anpassen_4

--- a/tabelle.html
+++ b/tabelle.html
@@ -5,11 +5,11 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Tabelle</title>
 	<style type="text/css">
-		body{line-height: 1.428571429;}
+		body{line-height: 1.428571429; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;}
 		table {border-collapse: collapse; margin-left:10px;}
 		thead{background-color: #E4E4E4;}
 		th{padding: 10px 5px; text-align: left;}
-		td{border-top: 1px solid #CBCBCB; vertical-align: top; padding: 5px 10px 5px 5px; font-size:14px; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;}
+		td{border-top: 1px solid #CBCBCB; vertical-align: top; padding: 5px 10px 5px 5px; font-size:14px;}
 		code{padding: 2px 4px; font-size: 90%; color: #c7254e; white-space: nowrap; background-color: #f9f2f4;}
 		h1.special{clear:both; margin:20px 10px 20px 10px; font-weight: 500; line-height: 1.1; font-size:36px;}
 		.back{clear:left; margin: 20px 10px 0 10px;}
