--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="container">
         <h1>Willkommen zum Weblog!</h1>
         <p>Hier findest Du Beispiele, die im Rahmen der Hausaufgaben des Online-Kurses "Web-Engineering I: Grundlagen der Web-Entwicklung" erstellt wurden. Es ist einer der vielen kostenlosen Kursangebote der Online-Lernplattform <a href="https://iversity.org" title="iversity.org" target="_blank">iversity.org</a>.</p>
-        <p>Viel Spaß beim bewerten!</p>
+        <p>Viel Spaß beim Bewerten!</p>
         <!--  <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>-->
       </div>
     </div>
@@ -46,7 +46,7 @@
         </div>
         <div class="col-md-4">
           <h2>Suchformular</h2>
-          <p>Beispiel eines Formulars zur Wikipedia-Suche</p>
+          <p>Beispiel eines Formulars zur Wikipedia-Suche</p><br />
           <p><a class="btn btn-primary" href="suchformular.html" role="button">Zum Suchformular &raquo;</a></p>
        </div>
       </div>
