--- a/tabelle.html
+++ b/tabelle.html
@@ -23,7 +23,7 @@
 
 </head>
 <body>
-
+<p class="back"><a class="btn btn-primary" href="index.html">&laquo; Zurück</a></p>
 <h1 class="special">Übersicht aller "XHTML 1.0 strict"-Elemente</h1>
 <table>
 	<thead>
